code webkit scrollbar css design fixed on Edge

--- a/client/src/pages/post/Post.module.css
+++ b/client/src/pages/post/Post.module.css
@@ -11,6 +11,24 @@
   /* when you want to add x-overflow-scroll in code block pre tag */
 }
 
+.postPage .postBox *::-webkit-scrollbar {
+  display: none;
+}
+
+.postPage .postBox pre::-webkit-scrollbar {
+  display: flex;
+  width: 0.4rem;
+  height: 0.4rem;
+}
+
+.postPage .postBox pre::-webkit-scrollbar-thumb {
+  background-color: white;
+}
+
+.postPage .postBox pre::-webkit-scrollbar-track {
+  background-color: black;
+}
+
 .postPage .postBox .postImgTextBox .postTitleImgBox {
   display: flex;
   justify-content: center;
@@ -177,7 +195,6 @@
   }
 
   .postPage .postBox .postImgTextBox .postTextBox .postContentText pre {
-    font-size: 0.5rem;
     padding: 0.5rem 0.2rem;
   }
 }
